formatting for step-3 notebook

--- a/Tutorials/Step_3-Using_your_Graph.ipynb
+++ b/Tutorials/Step_3-Using_your_Graph.ipynb
@@ -4,21 +4,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Step 3: Using your Graph\n",
+    "# Step 3: Using your Graph to Calculate Travel Times Along the Network\n",
     "\n",
-    "In step 3 of this tutorial, we use our cleaned graph to create an Origin-Destination matrix (OD). Our setting remains Reykjavik, Iceland, as we look at travel times along the network to churches."
+    "In step 3 of this tutorial, we use our cleaned graph to create an Origin-Destination matrix (OD).\n",
+    "Our setting remains Reykjavik, Iceland, as we look at travel times along the network to churches."
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# This is a Jupyter Notebook extension which reloads all of the modules whenever you run the code\n",
-    "# This is optional but good if you are modifying and testing source code\n",
-    "%load_ext autoreload\n",
-    "%autoreload 2"
+    "## Import Libraries and Load the Graph\n",
+    "\n",
+    "We start by importing the necessary libraries and loading the graph we created in step 2."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Import Libraries\n",
+    "\n",
+    "We start by importing the necessary libraries:\n",
+    "- `os` to set the working directory\n",
+    "- `networkx` to work with the graph\n",
+    "- `geopandas` to work with the geospatial data\n",
+    "- `pandas` to work with the data\n",
+    "- `pickle` to load the graph\n",
+    "- `shapely` to work with the geometry\n",
+    "- `GOSTnets` to apply custom functions to the network"
    ]
   },
   {
@@ -31,33 +45,20 @@
     "import networkx as nx\n",
     "import geopandas as gpd\n",
     "import pandas as pd\n",
-    "import pickle as pkl"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "import pickle as pkl\n",
+    "from shapely.geometry import Point\n",
+    "\n",
     "# import GOSTnet library\n",
     "import GOSTnets as gn"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from shapely.geometry import Point"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "First, we read in the graph from the result of the cleaning process (Step 2)"
+    "### Read in the Graph\n",
+    "\n",
+    "We set the path and read in the graph from the result of the cleaning process (Step 2)"
    ]
   },
   {
@@ -70,6 +71,13 @@
     "G = pkl.load(\n",
     "    open(os.path.join(pth, \"tutorial_outputs\", r\"iceland_network_clean.pickle\"), \"rb\")\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Calculate Travel Times For Each Edge of the Graph"
    ]
   },
   {
@@ -94,9 +102,11 @@
    "source": [
     "We want to convert length to time, so that we can conduct analysis on how long it takes to reach certain destinations.  \n",
     "\n",
-    "We do this using the convert_network_to_time function. We have used a factor of 1000, because the function is expecting meters, so we need to convert the units of kilometers to meters.   \n",
+    "We do this using the `convert_network_to_time` function.\n",
+    "We have used a factor of 1000, because the function is expecting meters, so we need to convert the units of kilometers to meters.   \n",
     "\n",
-    "The convert_network_to_time function uses a default speed dictionary that assigns speed limits to OSM highway types. However, it is possible to specify your own speed dictionary."
+    "The `convert_network_to_time` function uses a default speed dictionary that assigns speed limits to OSM highway types.\n",
+    "However, it is possible to specify your own speed dictionary."
    ]
   },
   {
@@ -130,7 +140,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To do this for just one journey, we could call nx.shortest_path_length on any given origin or destination node. Let's list 10 of our nodes using this networkX function:"
+    "To do this for just one journey, we could call `nx.shortest_path_length` on any given origin or destination node.\n",
+    "Let's list 10 of our nodes using this networkX function:"
    ]
   },
   {
@@ -140,6 +151,13 @@
    "outputs": [],
    "source": [
     "list(G_time.nodes)[:10]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now we will calculate the travel time between the first and tenth node in the list."
    ]
   },
   {
@@ -155,6 +173,13 @@
     "    \"The travel time between A and B is: %d seconds, or %d minutes!\"\n",
     "    % (travel_time, travel_time / 60)\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Calculate Travel Times to Churches"
    ]
   },
   {
@@ -180,7 +205,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next, We set a variable poly equal to just the geometry"
+    "Next, we set a variable poly equal to just the geometry"
    ]
   },
   {
@@ -212,7 +237,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "With this in hand, we can read in a shapefile of destinations - here, the churches in Iceland. We use Shapely's 'within' command to select just those in the Reykjavik area:"
+    "With this in hand, we can read in a shapefile of destinations - here, the churches in Iceland.\n",
+    "We use Shapely's 'within' command to select just those in the Reykjavik area:"
    ]
   },
   {
@@ -229,7 +255,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In order to perform network analysis we want to know the closest network node to each church. For this, we use the pandana snap function to snap the church locations to the road network:"
+    "In order to perform network analysis we want to know the closest network node to each church.\n",
+    "For this, we use the GOSTnets `pandana_snap` function to snap the church locations to the road network:"
    ]
   },
   {
@@ -335,7 +362,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We would like to make an OD matrix where the origin is the cottage we are renting in the city, and the destinations are the churches in Reykjavik. This will help us work out how many churches we can see today!. First, we need to create the origin. It has coordinates: 64.152215, -22.002099 (Lat,Lon), so I make a point of this:"
+    "We would like to make an OD matrix where the origin is the cottage we are renting in the city, and the destinations are the churches in Reykjavik.\n",
+    "This will help us work out how many churches we can see today!\n",
+    "First, we need to create the origin, it has coordinates: 64.152215, -22.002099 (Lat,Lon), so we make a `shapely.geometry.Point`:"
    ]
   },
   {
@@ -352,7 +381,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next, I load it into a geodataframe and snap it to the network:"
+    "Next, we load it into a GeoDataFrame and snap it to the network:"
    ]
   },
   {
@@ -409,7 +438,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, We can calculate the OD matrix using the GOSTNets calculate_OD function. Bear in mind it takes list objects as inputs:"
+    "Now, we can calculate the OD matrix using the GOSTNets `calculate_OD` function.\n",
+    "Bear in mind it takes list objects as inputs:"
    ]
   },
   {
@@ -478,7 +508,7 @@
    "source": [
     "It appears nearly all of the churches less than twenty minutes away.\n",
     "\n",
-    "Now that you are up to speed on the basics, check out some of the example notebooks in the GOSTNets_PublicGoods 'Implementations' folder."
+    "Now you are up to speed on the basics!"
    ]
   }
  ],
