--- a/Tutorials/EXAMPLE_Finding_links_between_pairs.ipynb
+++ b/Tutorials/EXAMPLE_Finding_links_between_pairs.ipynb
@@ -10,6 +10,32 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Import Libraries and Define Input Data\n",
+    "\n",
+    "First we'll import the necessary libraries and define the input data."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Libraries\n",
+    "\n",
+    "We'll use the following libraries:\n",
+    "\n",
+    "- `os` for setting the working directory\n",
+    "- `pickle` to load the data\n",
+    "- `networkx` to calculate travel times through the graph\n",
+    "- `geopandas` to work with the geospatial data\n",
+    "- `pandas` to work with the data\n",
+    "- `shapely.geometry` to work with the geometry of the data\n",
+    "- `GOSTnets` to apply custom functions to the network"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -21,17 +47,20 @@
     "import geopandas as gpd\n",
     "import pandas as pd\n",
     "\n",
-    "from shapely.geometry import MultiLineString"
+    "from shapely.geometry import MultiLineString\n",
+    "\n",
+    "# import the GOSTnet library\n",
+    "import GOSTnets as gn"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# import the GOSTnet library\n",
-    "import GOSTnets as gn"
+    "### Load Input Data\n",
+    "\n",
+    "We define the path to the Iceland network tutorial data, and load the network graph information.\n",
+    "Then we load the origins and destination data, so that we're ready to calculate travel times between the points."
    ]
   },
   {
@@ -57,6 +86,16 @@
     "rek_grid = gpd.read_file(rek_pop_grid_file)\n",
     "in_churches = gpd.read_file(churches_file)\n",
     "in_churches = in_churches.to_crs(rek_grid.crs)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Calculate Shortest Paths Between Loaded Origins and Destinations\n",
+    "\n",
+    "We'll calculate the shortest paths between the loaded origins and destinations.\n",
+    "To do this we first need to snap the origins and destinations to the network, only then can we calculate the shortest paths between them."
    ]
   },
   {
@@ -112,7 +151,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Calculate line strings connecting all origins to all destinations"
+    "## Calculate line strings connecting all origins to all destinations\n",
+    "\n",
+    "We'll calculate the line strings connecting all origins to all destinations.\n",
+    "For the sake of the example, we'll only calculate the line strings between the first 10 origins and the first 10 destinations."
    ]
   },
   {
@@ -125,6 +167,13 @@
     "# to make the computation faster. We will only use the first 10 of each\n",
     "origins = origins[:10]\n",
     "destinations = destinations[:10]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Practically we perform this calculation by looping through all origins and destinations and calculating the line string between them."
    ]
   },
   {
@@ -156,6 +205,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Write the data to a file\n",
+    "\n",
+    "Finally, we'll write the data to a file.\n",
+    "First we write all connection data to a CSV file."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -164,6 +223,13 @@
     "# Write all connections to file\n",
     "all_results = pd.DataFrame(all_res, columns=[\"O\", \"D\", \"geometry\"])\n",
     "all_results.to_csv(os.path.join(pth, \"tutorial_outputs\", \"all_OD_links.csv\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Then we write the connections information out to a CSV file."
    ]
   },
   {
@@ -191,13 +257,6 @@
     "    os.path.join(pth, \"tutorial_outputs\", \"OD_links_usage.csv\")\n",
     ")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
