fix doc-strings ex-fixing

--- a/Tutorials/EXAMPLE_Fixing_your_road_network.ipynb
+++ b/Tutorials/EXAMPLE_Fixing_your_road_network.ipynb
@@ -6,7 +6,34 @@
    "source": [
     "# Fixing your road network graph\n",
     "\n",
+    "*Note: This notebook includes processes covered in the [Step 2](Step_2-Clean_Network.ipynb) Tutorial Notebook.*\n",
+    "\n",
     "The following notebook showcases some common practices to inspect the quality of your road-network graph, and possibilities to improve it."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Import Libraries and Load Data\n",
+    "\n",
+    "We will start by importing the necessary libraries and loading the data."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Import Libraries\n",
+    "\n",
+    "We will use the following libraries:\n",
+    "\n",
+    "- `os` to set the working directory and handle file paths\n",
+    "- `networkx` to handle the graph data structure\n",
+    "- `osmnx` to plot the network graph\n",
+    "- `pickle` to load the network data\n",
+    "- `matplotlib` to help plot and format the graph\n",
+    "- `GOSTnets` to access custom GOSTnets functionality"
    ]
   },
   {
@@ -18,17 +45,20 @@
     "import os\n",
     "import networkx as nx\n",
     "import osmnx as ox\n",
-    "import pickle as pkl"
+    "import pickle as pkl\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "# import the GOSTnets library\n",
+    "import GOSTnets as gn"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# import the GOSTnets library\n",
-    "import GOSTnets as gn"
+    "### Load Data\n",
+    "\n",
+    "Define the path to the tutorial data and then load the network."
    ]
   },
   {
@@ -42,6 +72,24 @@
     "\n",
     "# read back your graph from step 2 from you saved pickle\n",
     "G = pkl.load(open(os.path.join(data_pth, \"iceland_network_clean.pickle\"), \"rb\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Graph processing\n",
+    "\n",
+    "In this notebook the first processing step we take is to load the largest subgraph."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Identify the largest subgraph\n",
+    "\n",
+    "We will start by identifying the largest subgraph in the network."
    ]
   },
   {
@@ -76,6 +124,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Plot the largest subgraph\n",
+    "\n",
+    "We will then plot the largest subgraph to visualize the network."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -85,8 +142,12 @@
     "G_largest.graph[\"crs\"] = \"epsg:32646\"\n",
     "G_largest.graph[\"name\"] = \"Iceland\"\n",
     "\n",
+    "fig, ax = plt.subplots(figsize=(10, 14))\n",
+    "ax.set_facecolor(\"k\")\n",
+    "ax.set_title(\"Iceland - The Largest Network\")\n",
     "# largest connected subgraph\n",
-    "ox.plot_graph(G_largest, figsize=(10, 14), edge_linewidth=1, node_size=7)"
+    "fig, ax = ox.plot_graph(G_largest, ax=ax, edge_linewidth=1, node_size=7)\n",
+    "plt.show()"
    ]
   },
   {
