--- a/Tutorials/Step_1-Extract_From_OSM.ipynb
+++ b/Tutorials/Step_1-Extract_From_OSM.ipynb
@@ -4,13 +4,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## note: As of Jan 21, 2020 This tutorial is using the GOSTnets version from this repo's master branch. Make sure that the GOSTnets version from PyPi is uninstalled and that you are pointing your path to the correct location of the library."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# Step 1: Extract from OSM\n",
     "The purpose of this script is to show how to go from a .osm.pbf file to a network format that GOSTnets will accept. \n",
     "Additional modifications in this script include: clipping the roads to an input polygon (here, rek2.shp), and filtering the roads DataFrame by a list of accepted road types, as tagged in OSM (see accepted_road_types list). "
@@ -23,8 +16,7 @@
    "outputs": [],
    "source": [
     "import geopandas as gpd\n",
-    "import os\n",
-    "import sys"
+    "import os"
    ]
   },
   {
@@ -43,8 +35,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Add to your system path the location of the LoadOSM.py and GOSTnet.py scripts.  \n",
-    "In this case, we use relative paths (\"..\") to locate the parent directory (one level up). One dot (\".\") means current directory."
+    "Import the GOSTnets library as gn."
    ]
   },
   {
@@ -53,7 +44,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sys.path.append(\"../\")\n",
     "import GOSTnets as gn"
    ]
   },
@@ -216,7 +206,7 @@
    "outputs": [],
    "source": [
     "clip_shp = gpd.read_file(os.path.join(pth, \"tutorial_data\", \"rek2.shp\"))\n",
-    "clip_shp = clip_shp.to_crs({\"init\": \"epsg:4326\"})\n",
+    "clip_shp = clip_shp.to_crs(\"epsg:4326\")\n",
     "clip_shp_obj = clip_shp.geometry.iloc[0]"
    ]
   },
@@ -271,7 +261,7 @@
    "outputs": [],
    "source": [
     "iceland.roads_raw = iceland.roads_raw.loc[\n",
-    "    iceland.roads_raw.geometry.intersects(clip_shp_obj) is True\n",
+    "    iceland.roads_raw.geometry.intersects(clip_shp_obj) == True  # noqa: E712\n",
     "]"
    ]
   },
@@ -289,6 +279,16 @@
    "outputs": [],
    "source": [
     "iceland.generateRoadsGDF(verbose=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# view the first 5 rows of the newly created roads GeoDataFrame\n",
+    "iceland.roadsGPD.head()"
    ]
   },
   {
