--- a/_sources/Tutorials/EXAMPLE_Gravity_Calculations.ipynb
+++ b/_sources/Tutorials/EXAMPLE_Gravity_Calculations.ipynb
@@ -1,6 +1,40 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Example Network Gravity Calculations\n",
+    "\n",
+    "This notebook demonstrates how to calculate network gravity using the gravity model.\n",
+    "The gravity model is a simple model that estimates the flow of people, goods, or information between two locations.\n",
+    "The model is based on the idea that the flow between two locations is proportional to the product of their masses and inversely proportional to the distance between them."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Import Libraries and Load Data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Import Libraries\n",
+    "\n",
+    "We import the following libraries:\n",
+    "\n",
+    "- `os` to define paths\n",
+    "- `rasterio` to read raster files\n",
+    "- `geopandas` to read vector files\n",
+    "- `pandas` to manipulate data\n",
+    "- `pickle` to load the network data\n",
+    "- `GOSTnets` to access custom GOST functions"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -11,17 +45,19 @@
     "\n",
     "import geopandas as gpd\n",
     "import pandas as pd\n",
-    "import pickle as pkl"
+    "import pickle as pkl\n",
+    "\n",
+    "# import the GOSTnets library\n",
+    "import GOSTnets as gn"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# import the GOSTnets library\n",
-    "import GOSTnets as gn"
+    "### Load Data\n",
+    "\n",
+    "Define the path information and load the data."
    ]
   },
   {
@@ -52,7 +88,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Gravity calculations\n",
+    "## Gravity calculations\n",
     "\n",
     "When we discuss gravity calculations, we are combining two measures to identify the attractiveness between pairs of locations\n",
     "1. Travel time between origins and destinations\n",
@@ -88,9 +124,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Check out data\n",
+    "## Read the data and calculate origin-destination table\n",
     "\n",
-    "#### open QGIS and check out rek_grid and the churches file"
+    "We will use the GOSTnets library to calculate the origin-destination table.\n",
+    "This table will be used to calculate the gravity model."
    ]
   },
   {
@@ -137,6 +174,15 @@
    "outputs": [],
    "source": [
     "OD = gn.calculate_OD(G_time, origins, destinations, fail_value=9999999)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Calculate the origin-destination table and gravity\n",
+    "\n",
+    "We will calculate the origin-destination table and gravity using the GOSTnets library."
    ]
   },
   {
@@ -202,17 +248,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Check out data\n",
+    "### Examine the data\n",
     "\n",
-    "#### open QGIS and check out rek_grid and the churches file"
+    "You can explore and examine the data by opening it up and loading it in QGIS."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
