--- a/_sources/Tutorials/Step_1-Extract_From_OSM.ipynb
+++ b/_sources/Tutorials/Step_1-Extract_From_OSM.ipynb
@@ -4,9 +4,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Step 1: Extract from OSM\n",
-    "The purpose of this script is to show how to go from a .osm.pbf file to a network format that GOSTnets will accept. \n",
-    "Additional modifications in this script include: clipping the roads to an input polygon (here, rek2.shp), and filtering the roads DataFrame by a list of accepted road types, as tagged in OSM (see accepted_road_types list). "
+    "# Step 1: Extract Road Network from OpenStreetMap (OSM)\n",
+    "This notebook will show you how to go from an .osm.pbf file to a GOSTnets-compatible network format. \n",
+    "In addition, this notebook will show you how to:\n",
+    "- Clip the roads to an input polygon (here we demonstrate with an ESRI Shapefile, rek2.shp)\n",
+    "- Filter the roads DataFrame by a list of accepted road types, as tagged in OSM (see the list `accepted_road_types` that we define in the code)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Import Libraries\n",
+    "First, we import the necessary libraries.\n",
+    "In this notebook, we use the following libraries:\n",
+    "- `geopandas` to manipulate geospatial data (e.g. clipping the roads to a polygon)\n",
+    "- `os` to define the path to the .osm.pbf file\n",
+    "- `GOSTnets` to import the OSM data and to save the network in a GOSTnets-compatible format (.gpickle in this case)"
    ]
   },
   {
@@ -16,34 +30,7 @@
    "outputs": [],
    "source": [
     "import geopandas as gpd\n",
-    "import os"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# This is a Jupyter Notebook extension which reloads all of the modules whenever you run the code\n",
-    "# This is optional but good if you are modifying and testing source code\n",
-    "%load_ext autoreload\n",
-    "%autoreload 2"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Import the GOSTnets library as gn."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "import os\n",
     "import GOSTnets as gn"
    ]
   },
@@ -67,7 +54,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Define filepaths."
+    "## Download data and set filepaths\n",
+    "We will use the `osm.pbf` file for the entire country of Iceland. You can download the file from [Geofabrik](https://download.geofabrik.de/europe/iceland.html), if you didn't download it from the GOSTnets repository \"tutorial_data\" folder.\n",
+    "Once you have downloaded the file, set the filepath to the .osm.pbf file, this can be a relative or absolute path.\n",
+    "We demonstrate construction of a relative file path using the `os.path` module to define a relative path to the \"tutorial_data\" folder."
    ]
   },
   {
@@ -90,14 +80,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "f"
+    "# check if the file exists, raise an exception if it does not\n",
+    "if os.path.isfile(f):\n",
+    "    print(\"File found.\")\n",
+    "else:\n",
+    "    raise Exception(\"File not found.\")\n",
+    "# print the file path\n",
+    "print(f)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "GOSTNets creates a special 'OSM_to_network' object. This object gets initialized with both a copy of the OSM file itself and the roads extracted from the OSM file in a GeoPandas DataFrame. This DataFrame is a property of the object called 'roads_raw' and is the starting point for our network."
+    "## Load the OSM data as a GOSTnets object\n",
+    "\n",
+    "GOSTNets can load OSM data as a special 'OSM_to_network' object.\n",
+    "This object gets initialized with both a copy of the OSM file itself and the roads extracted from the OSM file in a GeoPandas DataFrame. \n",
+    "This DataFrame is a property of the object called 'roads_raw' and is the starting point for our network."
    ]
   },
   {
@@ -106,6 +106,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# convert the .osm.pbf file to a GOSTnets object\n",
     "iceland = OSM_to_network(f)"
    ]
   },
@@ -115,6 +116,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# show the doc-string for the OSM_to_network object\n",
     "?iceland"
    ]
   },
@@ -124,6 +126,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# display the first 5 rows of the extracted dataframe of the roads network\n",
     "iceland.roads_raw.head()"
    ]
   },
@@ -133,7 +136,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# show the different highway types and counts\n",
+    "# show the different road types and counts\n",
     "iceland.roads_raw.infra_type.value_counts()"
    ]
   },
@@ -141,7 +144,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We define a list of the types of roads from the above that we consider acceptable for our road network"
+    "### Define the accepted road types list\n",
+    "\n",
+    "We define a list of the types of roads from the above that we consider acceptable for our road network.\n",
+    "This list is used to filter the roads DataFrame to only include the types specified."
    ]
   },
   {
@@ -171,7 +177,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We call the filterRoads method and pass it a list of acceptable road types"
+    "### Filter the roads DataFrame\n",
+    "\n",
+    "We call the `filterRoads` method and pass it a list of acceptable road types.\n",
+    "Then we can look at the infrastructure types in the filtered roads DataFrame (similar to what was done above), except now we have filtered the roads to only include the types we want."
    ]
   },
   {
@@ -196,6 +205,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Clip the roads to a polygon\n",
+    "\n",
     "Here, we import a shapefile for our area of interest. We want to make a map of Reykjavik, Iceland. We clip the extent of the country file to just the area around the capital (rek2.shp) below using standard GeoPandas functions:"
    ]
   },
@@ -205,6 +216,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# read the shapefile for the clip area\n",
     "clip_shp = gpd.read_file(os.path.join(pth, \"tutorial_data\", \"rek2.shp\"))\n",
     "clip_shp = clip_shp.to_crs(\"epsg:4326\")\n",
     "clip_shp_obj = clip_shp.geometry.iloc[0]"
@@ -216,7 +228,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# this is a geopandas dataframe\n",
+    "# visualize the clip area\n",
     "clip_shp.plot()"
    ]
   },
@@ -234,7 +246,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We check to see everything lines up by running intersect and counting the True / False returns. The count of the True values are the number of roads that intersect the AOI"
+    "### Check to ensure some roads intersect the AOI\n",
+    "\n",
+    "We check to see everything lines up by running intersect and counting the True / False returns.\n",
+    "The count of the True values are the number of roads that intersect the AOI"
    ]
   },
   {
@@ -251,7 +266,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Remove any roads that don't intersect the capital area, by modifying the roads_raw from the 'OSM_to_network' object "
+    "Next we remove any roads that don't intersect the capital area, by modifying the `roads_raw` DataFrame contained within the `OSM_to_network` object "
    ]
   },
   {
@@ -266,10 +281,13 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "Having narrowed the DataFrame to the roads we are interested in, we generate the RoadsGPD object, which is stored as a property of the 'OSM_to_network' object. The RoadsGPD object is a GeoDataFrame that further processes the roads. This includes splitting the edges where intersections occur, adding unique edge IDs, and adding to/from columns to the GeoDataFrame."
+    "# reprint the intersects value counts (should only be True now)\n",
+    "iceland.roads_raw.geometry.intersects(clip_shp_obj).value_counts()"
    ]
   },
   {
@@ -278,6 +296,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# view the first 5 rows of the newly created roads GeoDataFrame\n",
+    "iceland.roadsGPD.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Generate the RoadsGPD object\n",
+    "\n",
+    "Having narrowed the DataFrame to the roads we are interested in, we generate the `RoadsGPD` object, which is stored as a property of the `OSM_to_network` object.\n",
+    "The `RoadsGPD` object is a GeoDataFrame that further processes the roads.\n",
+    "This includes splitting the edges where intersections occur, adding unique edge IDs, and adding to/from columns to the GeoDataFrame."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# generate the roads GeoDataFrame, may take a few minutes\n",
     "iceland.generateRoadsGDF(verbose=False)"
    ]
   },
@@ -295,7 +335,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "With the initialReadIn() function, we transform this to a graph object"
+    "### Generate the GOSTnets graph object\n",
+    "\n",
+    "With the `initialReadIn()` method, we transform the roads GeoDataFrame into a graph object"
    ]
   },
   {
@@ -311,7 +353,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We save this graph object down to file using gn.save(). The save function produces three outputs: a node GeoDataFrame as a CSV, an edge GeoDataFrame as a CSV, and a graph object saved as a pickle."
+    "## Save the graph object to file\n",
+    "\n",
+    "We save this graph object down to file using `gn.save()`. The save function produces three outputs: a node GeoDataFrame as a CSV, an edge GeoDataFrame as a CSV, and a graph object saved as a pickle."
    ]
   },
   {
@@ -336,7 +380,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Move on to Step 2 to see how we clean up this rough network."
+    "Move on to [Step 2](Step_2-Clean_Network.ipynb) to see how we clean up this rough network."
    ]
   }
  ],
