--- a/_sources/Tutorials/Step_2-Clean_Network.ipynb
+++ b/_sources/Tutorials/Step_2-Clean_Network.ipynb
@@ -4,11 +4,37 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Step 2: Clean Network\n",
+    "# Step 2: Cleaning an OSM Road Network\n",
     "\n",
-    "This is a further post-processing function now found within the network_clean GOSTnets submodule. This function cleans the network by removing excessive nodes, and ensures all edges are bi-directional (except in the case of one-way roads).\n",
+    "This notebook contains further post-processing, also found within the `network_clean` GOSTnets submodule.\n",
+    "This function cleans the network by removing excessive nodes, and ensures all edges are bi-directional (except in the case of one-way roads).\n",
     "\n",
-    "WARNING: The Clean Network function is a computationally expensive function, so it may take a while to run. It outputs a pickled graph object, a dataframe of the edges, and a dataframe of the nodes. The expectation is that this will only have to be run once."
+    "__WARNING:__ The `network_clean` function is a computationally expensive function, so it may take a while to run.\n",
+    "It outputs a pickled graph object, a dataframe of the edges, and a dataframe of the nodes.\n",
+    "The expectation is that this function will only be run once."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Setup the Notebook\n",
+    "\n",
+    "First we need to import the necessary libraries and set the file paths."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Import Libraries\n",
+    "\n",
+    "We will use the following libraries:\n",
+    "- `os` to set the file paths\n",
+    "- `time` to time the function\n",
+    "- `networkx` to work with the graph object\n",
+    "- `pickle` to load the graph object\n",
+    "- `GOSTnets` to use the `network_clean` function"
    ]
   },
   {
@@ -20,17 +46,19 @@
     "import os\n",
     "import time\n",
     "import networkx as nx\n",
-    "import pickle"
+    "import pickle\n",
+    "\n",
+    "# import the GOSTnets library\n",
+    "import GOSTnets as gn"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# import the GOSTnets library\n",
-    "import GOSTnets as gn"
+    "### Set File Paths\n",
+    "\n",
+    "We will set the file paths to read the output from the \"Step 1\" tutorial."
    ]
   },
   {
@@ -44,6 +72,15 @@
     "\n",
     "# read back your graph from step 1 from you saved pickle\n",
     "G = pickle.load(open(os.path.join(data_pth, \"iceland_unclean.pickle\"), \"rb\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Inspect and Clean the Network\n",
+    "\n",
+    "We will inspect the network and then clean it using the `network_clean` function."
    ]
   },
   {
@@ -85,7 +122,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Set up some parameters for the CleanNetwork function"
+    "Now we set up some parameters for the CleanNetwork function"
    ]
   },
   {
@@ -96,15 +133,16 @@
    "source": [
     "Iceland_UTMZ = \"epsg:32627\"\n",
     "\n",
-    "WGS = \"epsg:4326\"  # do not adjust. OSM natively comes in ESPG 4326"
+    "WGS = \"epsg:4326\"  # do not adjust. OSM natively comes in ESPG 4326 (Web Mercator)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Run the CleanNetwork Function.  \n",
-    "Changing verbose to True will write the outputs in the specified wpath."
+    "### Run the `clean_network` Function\n",
+    "\n",
+    "Changing the keyword `verbose` to True will write the outputs in the specified wpath."
    ]
   },
   {
@@ -140,7 +178,7 @@
     "collapsed": true
    },
    "source": [
-    "The clean_network function helps snapping points that are very close to one another. However, it does not conduct any check on whether the network is fully connected."
+    "The `clean_network` function helps snapping points that are very close to one another. However, it does not conduct any check on whether the network is fully connected."
    ]
   },
   {
@@ -148,7 +186,10 @@
    "metadata": {},
    "source": [
     "## Optional step: Only use the largest sub-graph\n",
-    "Network analysis is often done on only connected graphs. Disconnected graphs can result in paths that cannot reach their destination. Also, you can evaluate how connected your network is and have the option of going back and making more edits."
+    "\n",
+    "Network analysis is often done on only connected graphs.\n",
+    "Disconnected graphs can result in paths that cannot reach their destination.\n",
+    "Also, you can evaluate how connected your network is and have the option of going back and making more edits."
    ]
   },
   {
@@ -229,7 +270,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Optional: Compare networks (original / clean-version / largest subgraph)"
+    "## Optional: Compare networks (original / clean-version / largest subgraph)"
    ]
   },
   {
@@ -245,7 +286,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import osmnx as ox"
+    "# import the OSMnx library and matplotlib library for visualizations\n",
+    "import osmnx as ox\n",
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
@@ -259,7 +302,11 @@
     "G.graph[\"name\"] = \"Iceland\"\n",
     "\n",
     "# original graph\n",
-    "ox.plot_graph(G, figsize=(10, 14), edge_linewidth=1, node_size=7)"
+    "fig, ax = plt.subplots(figsize=(10, 14))\n",
+    "ax.set_facecolor(\"k\")\n",
+    "ax.set_title(\"Iceland - Original Network\")\n",
+    "fig, ax = ox.plot_graph(G, ax=ax, edge_linewidth=1, node_size=7)\n",
+    "plt.show()"
    ]
   },
   {
@@ -272,7 +319,11 @@
     "G_clean.graph[\"name\"] = \"Iceland\"\n",
     "\n",
     "# cleaned graph\n",
-    "ox.plot_graph(G_clean, figsize=(10, 14), edge_linewidth=1, node_size=7)"
+    "fig, ax = plt.subplots(figsize=(10, 14))\n",
+    "ax.set_facecolor(\"k\")\n",
+    "ax.set_title(\"Iceland - Cleaned Network\")\n",
+    "fig, ax = ox.plot_graph(G_clean, ax=ax, edge_linewidth=1, node_size=7)\n",
+    "plt.show()"
    ]
   },
   {
@@ -285,7 +336,11 @@
     "G_largest.graph[\"name\"] = \"Iceland\"\n",
     "\n",
     "# largest subgraph\n",
-    "ox.plot_graph(G_largest, figsize=(10, 14), edge_linewidth=1, node_size=7)"
+    "fig, ax = plt.subplots(figsize=(10, 14))\n",
+    "ax.set_facecolor(\"k\")\n",
+    "ax.set_title(\"Iceland - The Largest Subgraph\")\n",
+    "fig, ax = ox.plot_graph(G_largest, ax=ax, edge_linewidth=1, node_size=7)\n",
+    "plt.show()"
    ]
   }
  ],
